Tracked deleted comment: Fix illegible comment card
Starting from version version 24 we set an opacity
a809541878c3de6c1726d748cc3eff2725e19410
that makes the Removed comment very hard to read.

Steps to Reproduce

1. Enable Track Changes
2. Select a block of text
3. Add a comment
4. Delete the selected text
5. View the comment

No need to play with opacity here, better to keep it readable and
instead add a clear "Removed" label. To make sure the user recognizes
the lengthy comments as being removed, I have changed the box-shadow
whenever the user opens the card or overs it.

Notes:
- This is consistent with the Resolved example introduce in
https://github.com/CollaboraOnline/online/pull/13325
- And it also address the box-shadow which seems to be absent even in
the previously resolved example and visible in the initial issue:
https://github.com/CollaboraOnline/online/issues/13217

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -612,10 +612,6 @@ body {
 	box-shadow: 0 0 0 1000px rgba(var(--doc-type),0.15);
 }
 
-.cool-annotation.tracked-deleted-comment-show {
-	opacity: 0.5;
-}
-
 .cool-annotation.tracked-deleted-comment-hide {
 	display: none;
 }
@@ -661,7 +657,10 @@ body {
 .cool-annotation:not(.annotation-active) .cool-annotation-redline-content-wrapper:hover {
 	color: var(--color-text-dark);
 }
-
+.tracked-deleted-comment-show .cool-annotation-content-wrapper:hover,
+.tracked-deleted-comment-show.annotation-active .cool-annotation-content-wrapper {
+	box-shadow: 0 0 3px var(--color-error);
+}
 .annotation-active.modify-annotation-container .cool-annotation-content-wrapper,
 .annotation-active.reply-annotation-container .cool-annotation-content-wrapper {
 	width: auto;
@@ -732,6 +731,12 @@ body {
 
 .cool-annotation-content-resolved {
 	color: var(--color-success);
+	font-weight: 700;
+	font-size: 0.625rem;
+}
+
+.cool-annotation-content-removed {
+	color: var(--color-error);
 	font-weight: 700;
 	font-size: 0.625rem;
 }
